syntax = "proto3";

package seerep;

message MeasurementData
{
  // "union" containing data of one of these datatypes
  oneof data
  {
    double double_data = 1;
    int64 int64_data = 2;
    uint64 uint64_data = 3;
    bool bool_data = 4;
    string string_data = 5;
  }
}
